EXLM-2013 Spacing and Icon fix (#1197)
* fix for icon and spacing

* css fixes and js no industry fix

* css fix

* css fix and button fix

* prettier fix

* class fix

* ue changes in logic

* ue changes in logic

--- a/blocks/profile-welcome/profile-welcome.css
+++ b/blocks/profile-welcome/profile-welcome.css
@@ -15,20 +15,16 @@
     color: var(--spectrum-gray-900);
     text-align: center;
     text-transform: uppercase;
+    line-height: 17px;
 }
 
 .profile-welcome .profile-curated-card .profile-curated-card-heading {
-    font-size: var(--spectrum-font-size-900);
-    font-weight: var(--font-weight-700);
     color: var(--spectrum-gray-900);
     margin-top: 8px;
-    line-height: normal;
     text-align: center;
 }
 
 .profile-welcome .profile-curated-card .profile-curated-card-description {
-    font-size: var(--spectrum-font-size-400);
-    font-weight: var(--font-weight-400);
     color: var(--spectrum-gray-800);
     margin-top: 16px;
     text-align: center;
@@ -56,7 +52,6 @@
     box-sizing: border-box;
     border-bottom: 2px solid rgba(213, 213, 213, 0.3);;
     padding-bottom: 16px;
-    justify-content: space-between;
 }
 
 .profile-welcome .profile-user-card .profile-user-card-right{
@@ -93,17 +88,19 @@
     height: 75px;
 }
 
-.profile-welcome .profile-user-card-left .profile-user-card-title .heading, .profile-user-card-location .heading {
+.profile-welcome .profile-user-card-left .profile-user-card-title .title-heading, .profile-user-card-location .location-heading {
     font-size: var(--spectrum-font-size-75);
     font-weight: var(--font-weight-700);
     color: var(--spectrum-gray-900);
     text-transform: uppercase;
+    line-height: 15px;
 }
 
-.profile-welcome .profile-user-card-left .profile-user-card-title, .profile-user-card-location {
-    font-size: var(--spectrum-font-size-100);;
+.profile-welcome .profile-user-card-left .profile-user-card-title .content, .profile-user-card-location .content {
+    font-size: var(--spectrum-font-size-100);
     color: var(--spectrum-gray-800);
     font-weight: var(--font-weight-400);
+    line-height: 17px;
 }
 
 .profile-welcome .profile-user-card-left .profile-user-card-incomplete {
@@ -114,21 +111,27 @@
     gap: 8px;
 }
 
-.profile-welcome .profile-user-card-right .profile-user-card-role .incompleteProfile, .profile-user-card-industry .incompleteProfile, .profile-user-card-interests .incompleteProfile {
+.profile-welcome .profile-user-card-right .profile-user-card-role .incomplete-profile, .profile-user-card-industry .incomplete-profile, .profile-user-card-interests .incomplete-profile {
     font-style: italic;
+    line-height: 17px;
+    font-size: var(--spectrum-font-size-100);
+    color: var(--spectrum-gray-800);
+    font-weight: var(--font-weight-400);
 }
 
-.profile-welcome .profile-user-card-right .profile-user-card-role .heading, .profile-user-card-industry .heading, .profile-user-card-interests .heading {
+.profile-welcome .profile-user-card-right .profile-user-card-role .role-heading, .profile-user-card-industry .industry-heading, .profile-user-card-interests .interest-heading {
     font-size: var(--spectrum-font-size-75);
     font-weight: var(--font-weight-700);
     color: var(--spectrum-gray-900);
     text-transform: uppercase;
+    line-height: 15px;
 }
 
-.profile-welcome .profile-user-card-right .profile-user-card-role, .profile-user-card-industry, .profile-user-card-interests {
-    font-size: var(--spectrum-font-size-100);;
+.profile-welcome .profile-user-card-right .profile-user-card-role .content, .profile-user-card-industry .content, .profile-user-card-interests .content {
+    font-size: var(--spectrum-font-size-100);
     color: var(--spectrum-gray-800);
     font-weight: var(--font-weight-400);
+    line-height: 17px;
 }
 
 .profile-welcome .profile-user-card-left .profile-user-card-info .profile-user-card-name {
@@ -136,9 +139,10 @@
     font-weight: var(--font-weight-700);
     color: var(--spectrum-gray-900);
     margin-bottom: 8px;
+    line-height: 22px;
 }
 
-.profile-welcome.profile-user-card .profile-user-card-left .profile-user-card-communityInfo {
+.profile-welcome.profile-user-card .profile-user-card-left .profile-user-card-community-info {
     margin-bottom: 8px;
 }
 
@@ -146,12 +150,14 @@
     font-size: var(--spectrum-font-size-100);;
     color: var(--spectrum-blue-900);
     font-weight: var(--font-weight-700);
+    line-height: 20px;
 }
 
 .profile-welcome .profile-user-card-left .profile-user-card-info .profile-user-card-org {
     font-size: var(--spectrum-font-size-100);;
     color: var(--spectrum-gray-800);
     font-weight: var(--font-weight-400);
+    line-height: 20px;
 }
 
 .profile-welcome .profile-user-card-cta > a.button {
@@ -165,6 +171,7 @@
     margin-top: 16px;
     margin-bottom: 0px;
     padding: 6px 16px;
+    line-height: 21px;
 }
 
 .profile-welcome .profile-user-card-cta > a.button.primary {
@@ -184,6 +191,8 @@
     .profile-welcome {
         display: flex;
         gap: 40px;
+        max-width: 556px;
+        margin: 0 auto;
     }
 
     .profile-welcome .profile-curated-card .profile-curated-card-heading {
@@ -214,9 +223,11 @@
     .profile-welcome {
         flex-direction: row;
         gap: 20px;
+        margin: 0px;
+        max-width: none;
     }
 
-    .profile-welcome .profile-curated-card .profile-curated-card-eyebrowtext {
+    .profile-welcome .profile-curated-card .profile-curated-eyebrowtext {
         text-align: left;
     }
 
